--- a/client/src/components/Admin/Admin.scss
+++ b/client/src/components/Admin/Admin.scss
@@ -14,7 +14,7 @@
     align-items: center;
     padding: 0 20px 0 10px;
     height: 60px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px /* solid #59d0ff */;
     .toggle-sidebar {
       cursor: pointer;
       font-size: 20px;
