add sort n filter table n search by date n css fix

--- a/client/src/components/Admin/Content/ManageOrders/ManageOrder.scss
+++ b/client/src/components/Admin/Content/ManageOrders/ManageOrder.scss
@@ -3,6 +3,11 @@
     .btn-add-new {
       margin: 15px 0;
     }
+
+    .table-orders-container {
+      width: inherit;
+      overflow-x: auto;
+    }
   }
 
   .title {
