add eye icon to login password

--- a/client/src/components/Auth/Login.scss
+++ b/client/src/components/Auth/Login.scss
@@ -73,5 +73,16 @@
     .back {
       cursor: pointer;
     }
+
+    .pass-group {
+      position: relative;
+
+      .icons-eye {
+        cursor: pointer;
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+      }
+    }
   }
 }
